Refactor project structure: rename plan to project, update related modules and functions
- Renamed `parse_plan.py` to `parse_project.py` and updated its functions accordingly.
- Renamed `plan_models.py` to `project_models.py` and adjusted data classes to reflect project terminology.
- Updated `scheduling.py` to handle project validation and scheduling instead of plan.
- Modified `render_rows.py` to work with the new project data structure.
- Updated README.md and PKG-INFO to reflect changes in the API and project structure.
- Adjusted tests to use the new project structure and validation errors.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ gantt-chart-generator = "gantt_chart_generator.__main__:main"
 
 [tool.setuptools]
 include-package-data = false
-py-modules = ["plan_models", "parse_plan", "render_gantt", "render_rows", "scheduling"]
+py-modules = ["project_models", "parse_project", "render_gantt", "render_rows", "scheduling"]
 
 [tool.setuptools.packages.find]
 where = ["."]
