Implement Gantt Chart Generator with Project Scheduling and Rendering
- Added project_models.py to define data structures for WorkPackage, Milestone, Group, Category, and Project.
- Introduced FlatRenderRow for rendering rows in the Gantt chart.
- Created render_gantt.py for generating SVG Gantt charts using matplotlib, including dependency rendering.
- Developed render_rows.py to convert Project data into a flat list of render rows with proper indentation.
- Implemented scheduling.py for project validation, scheduling work packages, and computing group spans.
- Added error handling for project validation and scheduling errors.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ gantt-chart-generator = "gantt_chart_generator.__main__:main"
 
 [tool.setuptools]
 include-package-data = false
-py-modules = ["project_models", "parse_project", "render_gantt", "render_rows", "scheduling"]
+package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
-where = ["."]
+where = ["src"]
 include = ["gantt_chart_generator"]
